# mcp-deconvolute-demo

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
logs/: audit.jsonl
scenarios/dns_rebinding/: Readme.md  agent.py  internal_target.py  malicious_server.py  policy.yaml
scenarios/policy_enforcement_cowork/: Readme.md
scenarios/rug_pull/: Readme.md  agent.py  dcv_policy.yaml  malicious_server.py  malicous_server.py  secrets.env
scenarios/trojan_database/: agent.py  dcv_policy.yaml  malicous_server.py
shared/: llm.py  setup_db.py
tests/scenarios/rug_pull/: test_agent.py  test_malicious_server.py
