[project]
name = "mcp-deconvolute-demo"
version = "0.1.0"
description = "Demos to show how deconvolute protects AI Agents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deconvolute>=0.1.0a13",
    "mcp>=1.26.0",
    "starlette>=0.52.1",
    "uvicorn>=0.40.0",
    "rich>=14.3.2",
    "typer>=0.23.1",
    "openai>=2.21.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
dcv-demo = "cli:app"

[tool.uv]
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
]

[tool.setuptools]
packages = ["scenarios", "shared"]
# We also need cli.py to be importable for the script
py-modules = ["cli"]
